--- a/vignettes/sample_timing.Rmd
+++ b/vignettes/sample_timing.Rmd
@@ -98,7 +98,7 @@ For this study, we will use the ones defined in the models.
 ```{r echo=FALSE}
 # Set up simulation model
 if (!require(pkvancothomson)) {
-  PKPDsim::install_default_literature_model("pk_vanco_thompson")
+  PKPDsim::install_default_literature_model("pk_vanco_thomson")
   library(pkvancothomson)
 }
 model <- pkvancothomson::model()
