--- a/vignettes/busulfan_mipd.Rmd
+++ b/vignettes/busulfan_mipd.Rmd
@@ -51,7 +51,13 @@ levels collected per day, at 3.5, 4, 6 and 8 hours post-dose. We will adjust
 doses 2, 3, and 4 to achieve a target cumulative AUC of 90 by t = 192 hours.
 
 ```{r}
-tdm_times <- rep(c(3.5, 4, 6, 8), 4) + rep(c(0, 24, 48, 72), each = 4)
+tdm_scheme <- create_sampling_scheme(
+  time = rep(c(3.5, 4, 6, 8), 4),
+  offset_base = "peak",
+  anchors = rep(1:4, each = 4),
+  anchor_by = "dose"
+)
+
 adjust_at_dose <- c(2, 3, 4)
 
 target <- create_target_object(
@@ -217,7 +223,7 @@ for (i in ids) {
   
   treatment_summary <- sample_and_adjust_by_dose(
     adjust_at_dose = adjust_at_dose, 
-    tdm_times = tdm_times,
+    sampling_scheme = tdm_scheme,
     regimen = reg,
     covariates = covs,
     pars_true_i = pars_true_i,
