cosmetic changes for pkgdown

--- a/README.Rmd
+++ b/README.Rmd
@@ -44,3 +44,5 @@ You can install the development version of mipdtrial from [GitHub](https://githu
 # install.packages("devtools")
 devtools::install_github("InsightRX/mipdtrial")
 ```
+For examples of how to use the package to answer questions about MIPD and
+target attainment, check out the vignettes listed under "Articles!"
