--- a/vignettes/pegasp_mipd.Rmd
+++ b/vignettes/pegasp_mipd.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "pegasparaginase_mipd"
+title: "PEG Asparaginase"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{PEG-Asparaginase}
+  %\VignetteIndexEntry{PEG Asparaginase}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
