--- a/vignettes/busulfan_mipd.Rmd
+++ b/vignettes/busulfan_mipd.Rmd
@@ -28,7 +28,13 @@ AUC-guided busulfan dosing.
 # include where the model was installed.
 if (.Platform$OS.type == "windows") { 
     .libPaths(c("D:/a/mipdtrial/mipdtrial/check/mipdtrial.Rcheck", .libPaths()))
-  }
+}
+if(!require(pkbusulfanmccune, warn.conflicts = FALSE)) {
+  PKPDsim::install_default_literature_model("pk_busulfan_mccune")
+}
+if (!require(pkbusulfanshukla, warn.conflicts = FALSE)) {
+  PKPDsim::install_default_literature_model("pk_busulfan_shukla")
+}
 ```
 
 ```{r setup, message=FALSE, warning=FALSE}
