--- a/vignettes/busulfan_mipd.Rmd
+++ b/vignettes/busulfan_mipd.Rmd
@@ -23,27 +23,27 @@ study](https://link.springer.com/article/10.1007/s10928-024-09915-w) in which we
 compared non-compartmental analysis (NCA) with MAP Bayesian estimation for
 AUC-guided busulfan dosing.
 
-```{r echo=FALSE}
+```{r echo=FALSE, message=FALSE, warning=FALSE}
 # for CI, most windows users should not need this since the .libPaths should
 # include where the model was installed.
 if (.Platform$OS.type == "windows") { 
     .libPaths(c("D:/a/mipdtrial/mipdtrial/check/mipdtrial.Rcheck", .libPaths()))
 }
 if(!require(pkbusulfanmccune, warn.conflicts = FALSE)) {
-  PKPDsim::install_default_literature_model("pk_busulfan_mccune")
+  capture.output(PKPDsim::install_default_literature_model("pk_busulfan_mccune"))
 }
 if (!require(pkbusulfanshukla, warn.conflicts = FALSE)) {
-  PKPDsim::install_default_literature_model("pk_busulfan_shukla")
+  capture.output(PKPDsim::install_default_literature_model("pk_busulfan_shukla"))
 }
 ```
 
 ```{r setup, message=FALSE, warning=FALSE}
 library(mipdtrial)
-if(!require(pkbusulfanmccune, warn.conflicts = FALSE)) {
+if(!require(pkbusulfanmccune)) {
   PKPDsim::install_default_literature_model("pk_busulfan_mccune")
   library(pkbusulfanmccune)
 }
-if (!require(pkbusulfanshukla, warn.conflicts = FALSE)) {
+if (!require(pkbusulfanshukla)) {
   PKPDsim::install_default_literature_model("pk_busulfan_shukla")
   library(pkbusulfanshukla)
 }
@@ -52,9 +52,9 @@ if (!require(pkbusulfanshukla, warn.conflicts = FALSE)) {
 library(NHANES)
 
 # For data handling/plotting
-library(dplyr, warn.conflicts = FALSE)
-library(tidyr, warn.conflicts = FALSE)
-library(ggplot2, warn.conflicts = FALSE)
+library(dplyr)
+library(tidyr)
+library(ggplot2)
 
 ```
 
